// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with levels @250px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="250"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(50.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(100.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(150.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(200.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(250.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100%
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="150"
            opacity="0.2"
            width="25"
            x="225"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="150"
            opacity="0.2"
            width="100"
            x="125"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="150"
            opacity="0.2"
            width="125"
            x="0"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="250"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="37.5"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="75"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="25"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="25.674418604651155"
          >
            100%
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="60.55813953488371"
          >
            15%
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="95.44186046511626"
          >
            30%
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="130.32558139534882"
          >
            10%
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render with levels @500px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(100.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(200.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(300.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(400.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(500.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100%
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="150"
            opacity="0.2"
            width="50"
            x="450"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="150"
            opacity="0.2"
            width="200"
            x="250"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="150"
            opacity="0.2"
            width="250"
            x="0"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="500"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="75"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="150"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="50"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="25.674418604651155"
          >
            100%
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="60.55813953488371"
          >
            15%
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="95.44186046511626"
          >
            30%
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="130.32558139534882"
          >
            10%
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render with levels reversed @500px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(100.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(200.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(300.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(400.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(500.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100%
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="150"
            opacity="0.2"
            width="250"
            x="0"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="150"
            opacity="0.2"
            width="200"
            x="250"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="150"
            opacity="0.2"
            width="50"
            x="450"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="500"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="75"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="150"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="50"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="25.674418604651155"
          >
            100%
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="60.55813953488371"
          >
            15%
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="95.44186046511626"
          >
            30%
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="130.32558139534882"
          >
            10%
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render without levels @250px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="250"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(50.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(100.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(150.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(200.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(250.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100%
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        />
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="250"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="37.5"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="75"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="25"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="25.674418604651155"
          >
            100%
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="60.55813953488371"
          >
            15%
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="95.44186046511626"
          >
            30%
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="130.32558139534882"
          >
            10%
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render without levels @500px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(100.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(200.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(300.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(400.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(500.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100%
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        />
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="500"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="75"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="150"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="50"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="25.674418604651155"
          >
            100%
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="60.55813953488371"
          >
            15%
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="95.44186046511626"
          >
            30%
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="130.32558139534882"
          >
            10%
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render zoomed with levels @500px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(82.4672131147541,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              10%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(164.4344262295082,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(246.4016393442623,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              30%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(328.3688524590164,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(410.3360655737705,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              50%
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(492.3032786885246,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60%
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="150"
            opacity="0.2"
            width="0"
            x="500"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="150"
            opacity="0.2"
            width="90.1639344262295"
            x="409.8360655737705"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="150"
            opacity="0.2"
            width="409.8360655737705"
            x="0"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="409.8360655737705"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="122.95081967213115"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="245.9016393442623"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="81.9672131147541"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="25.674418604651155"
          >
            50%
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="60.55813953488371"
          >
            15%
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="95.44186046511626"
          >
            30%
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            font-size="0.7em"
            opacity="0.3"
            text-anchor="middle"
            x="0"
            y="130.32558139534882"
          >
            10%
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
